Criando models e aprofundando em callback function

--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -20,9 +20,7 @@
                     {{ instructor.name }}
                 </td>
                 <td>
-                    {% for service in instructor.services %}
-                        <span> {{ service }} </span>
-                    {% endfor %}
+                    <span> {{ instructor.services }} </span>
                 </td>
                 <td><a href="/instructors/{{ instructor.id }}">ver</a></td>
             </tr>
