Agrupando e contando colunas no SQL

--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -9,6 +9,7 @@
             <tr>
                 <th>Instructor</th>
                 <th>Atendimento</th>
+                <th>Alunos</th>
                 <th>Ação</th>
             </tr>
         </thead>
@@ -19,9 +20,8 @@
                     <span style="background-image: url({{ instructor.avatar_url }})"></span>
                     {{ instructor.name }}
                 </td>
-                <td>
-                    <span> {{ instructor.services }} </span>
-                </td>
+                <td>{{ instructor.services }} </td>
+                 <td>{{ instructor.total_students }}</td>
                 <td><a href="/instructors/{{ instructor.id }}">ver</a></td>
             </tr>
             {% endfor %}
